src/objects/Compte_rendu__c.object
<CustomObject>
    <description>Cet objet permet de sélectionner les questions CR en fonction du compte rendu sélectionné.</description>
    <fields>
        <fullName>Compte_rendu__c</fullName>
        <label>Compte rendu</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>INTER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operateur__c</fullName>
        <label>Opérateur</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PUS_FR</fullName>
                </value>
                <value>
                    <fullName>DPD_BNL</fullName>
                </value>
                <value>
                    <fullName>CLP_FR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_de_compte_rendu__c</fullName>
        <label>Type de compte rendu</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VA Standard</fullName>
                </value>
                <value>
                    <fullName>VALP</fullName>
                </value>
                <value>
                    <fullName>VA Quali</fullName>
                </value>
                <value>
                    <fullName>VA Orga</fullName>
                </value>
                <value>
                    <fullName>VAP PDA</fullName>
                </value>
                <value>
                    <fullName>VAP Seuil</fullName>
                </value>
                <value>
                    <fullName>VAP FDA</fullName>
                </value>
                <value>
                    <fullName>VAP Injoignable</fullName>
                </value>
                <value>
                    <fullName>VAP DA</fullName>
                </value>
                <value>
                    <fullName>VAP MEN</fullName>
                </value>
                <value>
                    <fullName>VAP VO</fullName>
                </value>
                <value>
                    <fullName>VAP QS</fullName>
                </value>
                <value>
                    <fullName>VAP Enquête de satisfaction</fullName>
                </value>
                <value>
                    <fullName>VAP Enquête de bienvenue</fullName>
                </value>
                <value>
                    <fullName>VAP FC</fullName>
                </value>
                <value>
                    <fullName>Recruitment visit report</fullName>
                </value>
                <value>
                    <fullName>Monitoring visit report</fullName>
                </value>
                <value>
                    <fullName>Course visit report</fullName>
                </value>
                <value>
                    <fullName>VA FDA</fullName>
                    <isActive>false</isActive>
                    <label>VA FDA</label>
                </value>
                <value>
                    <fullName>VA Injoignable</fullName>
                    <isActive>false</isActive>
                    <label>VA Injoignable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Compte rendu</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <label>Nom de compte rendu</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comptes rendus</pluralLabel>
    <recordTypes>
        <fullName>VA</fullName>
        <active>true</active>
        <label>VA</label>
    </recordTypes>
    <recordTypes>
        <fullName>VAP</fullName>
        <active>true</active>
        <label>VAP</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>